<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrazyVoice</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="regist_button">注册</string>
    <string name="set_serverinfor">修改连接配置</string>
    <string name="login_button">登录</string>
    <string name="forget_pwd_button">找回密码</string>
    <string name="test_button">测1</string>
    <string name="test2_button">测2</string>
    <string name="label_username">UserName</string>
    <string name="label_password">Password</string>
    <string name="password">password</string>
    <string name="username">username@localhost</string>
    <string name="title_activity_questions_list">QuestionsList</string>
    <string name="title_activity_chooseareaactivity">频道列表</string>
    <string name="title_activity_regist">regist</string>
    <string name="askQuestion">Ask Question</string>
    <string name="question_input">Please input your question!</string>
    <string name="title_activity_chat_room">ChatRoom</string>
    <string name="send_button">Send</string>
    <string name="regist_name">Enter your name</string>
    <string name="regist_pwd">Enter your password</string>
	<string name="test_text">这是一个测试用例</string>
	<string name="action_search">搜索</string>
	<string name="action_me_direction">我</string>
	<drawable name="clr_normal">#ff336699</drawable>
	<drawable name="clr_pressed">#ff284F77</drawable>
</resources>