<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/regist_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/regist_name" />

    <EditText
        android:id="@+id/regist_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/regist_pwd" />

    <Button
        android:id="@+id/regist_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regist_button" />

</LinearLayout>