<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center" >

        <FrameLayout
            android:id="@+id/username_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center" >

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/default_edittext_height"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:maxLength="20"
                android:paddingLeft="55dp"
                android:paddingRight="60dp" >
            </EditText>

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginStart="8dp"
                android:background="@drawable/login_usr_in_img"
                android:visibility="visible" />

            <Button
                android:id="@+id/button_username_clear"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_clear"
                android:visibility="invisible" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/usercode_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_layout"
            android:layout_marginTop="6dp"
            android:gravity="center" >

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/default_edittext_height"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="55dp"
                android:paddingRight="60dp" >
            </EditText>

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginStart="7dp"
                android:background="@drawable/login_code_in_img" />

            <Button
                android:id="@+id/button_pwd_eye"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_eye_closed" />

            <Button
                android:id="@+id/button_pwd_clear"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="35dp"
                android:background="@drawable/button_clear"
                android:visibility="invisible" />
        </FrameLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_below="@id/usercode_layout"
            android:layout_marginTop="30dp"
            android:background="#ff336699"
            android:gravity="center"
            android:text="@string/login_button"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/login"
            android:layout_below="@id/login"
            android:background="#00000000"
            android:text="@string/forget_pwd_button"
            android:textColor="#9E9E9E"
            android:textSize="16sp"
            android:textStyle="italic" 
             android:visibility="invisible" 
            />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/login"
            android:layout_below="@id/login"
            android:background="#00000000"
            android:gravity="center_vertical"
            android:text="@string/regist_button"
            android:textColor="#9E9E9E"
            android:textSize="16sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/button_set_serverinfor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login"
            android:layout_centerHorizontal="true"
            android:background="#00000000"
            android:gravity="left|center_vertical"
            android:text="@string/set_serverinfor"
            android:textColor="#9E9E9E"
            android:textSize="16sp"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/serverinfor_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:visibility="invisible" >

        <FrameLayout
            android:id="@+id/server_ip_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/text_server_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginStart="8dp"
                android:text="ip地址:" />

            <EditText
                android:id="@+id/edit_server_ip"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/default_edittext_height"
                android:inputType="text"
                android:maxLength="20"
                android:paddingLeft="55dp"
                android:paddingRight="60dp" >
            </EditText>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/server_port_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/server_ip_layout"
            android:gravity="center" >

            <TextView
                android:id="@+id/text_server_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginStart="8dp"
                android:text="端口号:" />

            <EditText
                android:id="@+id/edit_server_port"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/default_edittext_height"
                android:inputType="text"
                android:maxLength="20"
                android:paddingLeft="57dp"
                android:paddingRight="60dp" >
            </EditText>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/server_name_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/server_port_layout"
            android:gravity="center" >

            <TextView
                android:id="@+id/text_server_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginStart="8dp"
                android:text="服务器名:" />

            <EditText
                android:id="@+id/edit_server_name"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/default_edittext_height"
                android:inputType="text"
                android:maxLength="20"
                android:paddingLeft="70dp"
                android:paddingRight="60dp" >
            </EditText>
        </FrameLayout>

        <Button
            android:id="@+id/button_clear_server"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/server_name_layout"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="清空" />

        <Button
            android:id="@+id/button_enter_server"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_clear_server"
            android:layout_alignBottom="@+id/button_clear_server"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="确定" />
    </RelativeLayout>

</RelativeLayout>